@@ -1,6 +1,10 @@
 sssd (1.8.0~beta3-1) UNRELEASED; urgency=low
 
   * New upstream release.
+  * rules: Add configure flags
+    - disable RPATH
+    - disable building static libs
+    - enable all experimental features
 
  -- Timo Aaltonen <tjaalton@ubuntu.com>  Thu, 16 Feb 2012 10:24:46 +0200
 
